app/packs/styles/twitter_bootstrap.scss
@use "base_styles" as bs;

input, textarea, select {
    --bs-body-bg: #{bs.$light};
}

.bg-roamio {
    background-color: bs.$roamio-primary;
    @extend .text-light;
}

.btn {
    @extend .roamio-base;
    @extend .fw-semibold;
}

h1, h2, h3, h4, h5 {
    @extend .roamio-header; 
}

label {
    @extend .roamio-text;
}

#landing-topbar, #sidebar {
    .nav-link {
        color: bs.$body-bg;
  
        &:hover {
            color: darken(bs.$body-bg, 10%);
        }
  
        &:active {
            color: darken(bs.$body-bg, 20%);
        }
    }

    .active {
        background-color: darken(bs.$roamio-secondary, 2%);
    }

    .navbar-toggler span {
        background-color: bs.$body-bg;
    }
}

/* Overwrite bg elements with light text */
.bg-success, .bg-dark, .bg-primary, .btn-primary {
    @extend .text-light;
}

/* Remove border from toggler */
.navbar-toggler {
    border: 0 !important;
}

/* Animated navbar hamburger derived from: [https://www.youtube.com/watch?v=vJ85fm4m7lw]
* Credit: Clueless Expert
* Date published: 11 Apr 2021 [Accessed: 22 Nov 2024]
*/
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none !important;
    box-shadow: none !important;
    border: 0 !important;
}

/* Lines of the Toggler */
.toggler-icon {
    width: 30px;
    height: 3px;
    background-color: var(--bs-navbar-color);
    display: block;
    transition: all 0.2s;
}

/* Adds Space between the lines */
.middle-bar{
    margin: 5px auto;
}

/* State when navbar is opened (START) */
.navbar-toggler .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
}

.navbar-toggler .middle-bar {
    opacity: 0;
    filter: alpha(opacity=0);
}

.navbar-toggler .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
}
/* State when navbar is opened (END) */

/* State when navbar is collapsed (START) */
.navbar-toggler.collapsed .top-bar {
    transform: rotate(0);
}

.navbar-toggler.collapsed .middle-bar {
    opacity: 1;
    filter: alpha(opacity=100);
}

.navbar-toggler.collapsed .bottom-bar {
    transform: rotate(0);
}
/* State when navbar is collapsed (END) */

/* Color of Toggler when collapsed */
.navbar-toggler.collapsed .toggler-icon {
    background-color: var(--bs-navbar-color);
}

/* Increase size of validation icons on the select input to match size of other form inputs */
.form-select.is-invalid, .form-select.is-valid {
    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !important;
}

.table-responsive {
    .wide-column {
        width: 33%;

        @include bs.media-breakpoint-up(md) {
            width: 45%;
        }

        @include bs.media-breakpoint-up(lg) {
            width: 50%;
        }
    }

    .very-thin-column {
        width: 5%;
    }

    table {
        min-width: 750px;
    }
}

